[metadata]
name = multiprogressbars
version = 0.0.9
author = Lewis Bawden
author_email = lewisbawden@gmail.com
description = GUI for multiprocessed progressbars using PyQt5 and multiprocessing libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lewisbawden/MultiProgressBars
project_urls =
    GitHub = https://github.com/lewisbawden/MultiProgressBars
classifiers =
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: System :: Monitoring

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyQt5
    multiprocessing

[options.packages.find]
where = src
exclude =
    tests